--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <h1>Generador<span class="container__texto-azul"> de Contraseñas</span></h1>
                     <div class="container__campo"> 
                         <label class="texto__parrafo">Cantidad
-                            <input class="container__input" type="number" id="cantidad" >
+                            <input class="container__input" type="number" id="cantidad">
                         </label>
-                        <button class="boton" id="generar" >Generar</button>
+                        <button class="boton" id="generar"  onclick="generar()">Generar</button>
                     </div> 
                     <div class="container__campo">
-                        <input class="container__contrasena" type="text" id="contrasena" placeholder="contraseña">
+                        <input class="container__contrasenia" type="text" id="contrasenia" placeholder="contrasenia">
                     </div>
                 </div> 
             </div>
