--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <button class="boton" id="generar"  onclick="generar()">Generar</button>
                     </div> 
                     <div class="container__campo">
-                        <input class="container__contrasenia" type="text" id="contrasenia" placeholder="contrasenia">
+                        <input class="container__contrasenia" type="text" id="contrasenia" placeholder="Contraseña">
                     </div>
                 </div> 
             </div>
