--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <div class="container__informacion">
                 <div class="container__texto">
                     <h1>Generador<span class="container__texto-azul"> de Contraseñas</span></h1>
-                    <div class="container__campo"> 
+                    <div class="container__campo__1"> 
                         <label class="texto__parrafo">Cantidad
                             <input class="container__input" type="number" id="cantidad">
                         </label>
                         <button class="boton" id="generar" onclick="generar()">Generar</button>
                     </div> 
-                    <div class="container__campo">
+                    <div class="container__campo__2">
                         <div class="container__password">
                             <input class="container__contrasenia" type="text" id="contrasenia" placeholder="Contraseña">
                             <span id="mensaje-fortaleza" class="mensaje-fortaleza"></span>
                         </div>
                         <div class="container__borrar">
-                            <button class="botonLimpiar" id="botonLimpiar" onclick="limpiarCampos">Borrar todo</button>
+                            <button class="botonLimpiar" id="botonLimpiar" onclick="limpiarCampos">Borrar</button>
                             <span id="mensaje-fortaleza" class="mensaje-fortaleza"></span>
                         </div>
                     </div>
